# naive-taskarena

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  claude.sh  pyproject.toml
.claude/: CLAUDE.md  mcp.json  settings.json
docs/superpowers/plans/: 2026-04-03-health-check-once.md  2026-04-07-morning-reminder.md  2026-04-08-assign-start-date.md  2026-04-10-multi-user-group-chat.md
docs/superpowers/specs/: 2026-04-02-taskarena-design.md  2026-04-02-taskarena-plan.md  2026-04-03-health-check-once-design.md  2026-04-03-taskarena-handoff.md  2026-04-07-handoff-prompt.md  2026-04-07-morning-reminder-design.md  2026-04-08-assign-start-date-design.md  2026-04-08-handoff.md  2026-04-10-handoff.md  2026-04-10-multi-user-group-chat-design.md
src/taskarena/: __main__.py  channel.py  channel_format.py  config.py  events.py  feishu.py  log.py  scheduler.py  tools.py
tests/: test_channel_format.py  test_channel_lock.py  test_config.py  test_events.py  test_feishu.py  test_main.py  test_morning_reminder_lifecycle.py  test_scheduler.py  test_tools.py
