[project]
name = "taskarena"
version = "0.1.0"
description = "TaskArena - Feishu task management bridge for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "croniter>=5.0.1",
    "httpx[socks]>=0.27.0",
    "lark-oapi>=1.3.0",
    "mcp>=1.3.0",
    "python-dotenv>=1.0.1",
    "python-socks>=2.8.1",
    "pyyaml>=6.0.2",
]

[project.scripts]
taskarena = "taskarena.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
